# automake_sample

./: CMakeLists.txt  Makefile.am  configure.ac  main.c  run.sh
src/: Makefile.am  hello.c  main.c
src/lib/: Makefile.am  lib_test.c  lib_test.h
